# janus-gateway-cmake

./: CMakeLists.txt  CMakePresets.json  LICENSE  ReadMe.adoc
.github/workflows/: main.yml
cmake_utils/: check_dependencies.cmake  download_project.cmake  find_system_library.cmake  prepare_dependencies.cmake  prepare_header_path.cmake
